added flower drawing to html.index

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
       Hi Janet, this is George, it's great to be collaborating on this project
       together!
     </p>
+    <p>Below is image of an line illustration of flowers</p>
+    <a href=""></a>
+    <img src="https://i.pinimg.com/originals/0c/3e/69/0c3e69bfecd8296ee3feef699ee5bc86.png" alt="">
   </body>
 </html>
